doc(guides-interceptor): Complete first (trivial) example
Later commits that affect guides should name the affected
component as `guides-*`. For example, this commit uses
`guides-interceptor` instead of `interceptor`.

--- a/docs/source/guides/examples/interceptor.ipynb
+++ b/docs/source/guides/examples/interceptor.ipynb
@@ -9,41 +9,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "nb_dir = os.path.abspath(os.path.join('..', '..', '..'))\n",
-    "if nb_dir not in sys.path:\n",
-    "    sys.path.append(nb_dir)"
+    "from typing import Any, Callable\n",
+    "from functools import wraps\n",
+    "from types import MethodType"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The interceptor design pattern does what?"
+    "In software engineering, the interceptor design pattern changes the behaviour of an existing service [^1]. This approach is used, for example, to implement the `evokit.evolvables.selectors.Elitist` wrapper.\n",
+    "\n",
+    "This short tutorial illustrates how this is done. You can define new wrappers using this approach.\n",
+    "\n",
+    "[^1]: \"Decorator\" is more fitting, but the name conflicts with the Python decorator. \"Interceptor\" seems to be the next best thing."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this framework, an interceptor adds to the behaviour of an operator. This example implements an interceptor that changes any selector to an elitist selector."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To begin, consider a simple example. Declare a class NumberBox with attribute `.value` and method `.increment`. For now, calling `.increment` increments `.value` by 1."
+    "### A Trivial Problem\n",
+    "\n",
+    "To begin, consider a simple example. Declare a class `NumberBox` with attribute `.value` and method `.increment`. For now, calling `.increment` increments `.value` by 1.\n",
+    "\n",
+    "The problem, then, is to find a way to modify `.increment` so that it increments `.value` by 2, 3, and so on."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,19 +67,20 @@
     "    old_value = nb.value\n",
     "    print(f\"Initial value is {old_value}\")\n",
     "    new_value = (nb.increment(), nb.value)[-1]\n",
-    "    print(f\"Increased by {new_value - old_value}\")"
+    "    print(\"Calling `.increment()` increases the value by\"\n",
+    "          f\" {new_value - old_value}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check that `NumberBox` behaves as expected:"
+    "Check that `NumberBox` behaves as expected."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
      "output_type": "stream",
      "text": [
       "Initial value is 1\n",
-      "Increased by 1\n"
+      "Calling `.increment()` increases the value by 1\n"
      ]
     }
    ],
@@ -101,12 +101,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are many ways to change the number `.increment` increases `.value` by. For example, one can define a new class, NumberBoxBy2, which extends NumberBox and overrides `.increment`."
+    "### Attempt 1: Overriding `.increment`\n",
+    "\n",
+    "There are many ways to change the number `.increment` increases `.value` by. For example, one can define a new class, `NumberBoxBy2`, which extends NumberBox and overrides `.increment`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,8 +119,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This approach is inflexible, however. `NumberBoxBy2.increment` now increases `.value` by exactly 2; changing the behaviour of `.increment` further requires extending `NumberBoxBy2`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +135,7 @@
      "output_type": "stream",
      "text": [
       "Initial value is 1\n",
-      "Increased by 2\n"
+      "Calling `.increment()` increases the value by 2\n"
      ]
     }
    ],
@@ -139,79 +148,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This approach is inflexible, however. For each class with `.increment` that increases its `.value`, one must extend it separately. ~~It would be helpful~~ to have a way to change the behaviour of `.increment` for _any_ class that has that method."
+    "### Attempt 2: Constructing an Interceptor\n",
+    "\n",
+    "The correct approach follows. Suppose there is a function `by1more: NumberBox -> NumberBox` that, when given an `NumberBox`, returns a `NumberBox` whose `.increment` increases `.value` by 1 more. \n",
+    "\n",
+    "```python\n",
+    "def by1more(sel: NumberBox) -> NumberBox:\n",
+    "    pass\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suppose there is a function that takes a `NumberBox` and changes its behaviour, so that its `.increment` now increases `.value` by 2. The signature of that function is as follows:"
+    "The key is using `functools.wraps`. A minimal example follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def by2(sel: NumberBox):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Any, Callable\n",
-    "from functools import wraps\n",
-    "from types import MethodType"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def by2(numbox: NumberBox):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this example, `by2` creates a wrapper of the `.increment` method of its argument `numbox`, then replaces the original `.increment` with that wrapper."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def by2(numbox: NumberBox):\n",
+    "def by1more(numbox: NumberBox):\n",
     "    def wrap_function(original_increment:\n",
     "                      Callable[[NumberBox], None]) -> Callable:\n",
     "\n",
     "        @wraps(original_increment)\n",
     "        def wrapper(self: NumberBox) -> None:\n",
     "            original_increment(self)\n",
-    "            original_increment(self)\n",
+    "            self.value = self.value + 1\n",
     "        return wrapper\n",
     "\n",
     "    setattr(numbox, 'increment',\n",
     "            MethodType(\n",
     "                wrap_function(numbox.increment.__func__),  # type:ignore\n",
-    "                numbox))"
+    "                numbox))\n",
+    "    return numbox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +198,7 @@
      "output_type": "stream",
      "text": [
       "Initial value is 1\n",
-      "Increased by 1\n"
+      "Calling `.increment()` increases the value by 1\n"
      ]
     }
    ],
@@ -230,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -238,81 +217,20 @@
      "output_type": "stream",
      "text": [
       "Initial value is 1\n",
-      "Increased by 2\n"
+      "Calling `.increment()` increases the value by 3\n"
      ]
     }
    ],
    "source": [
     "modified_nb = NumberBox(1)\n",
-    "by2(modified_nb)\n",
-    "check_increment(modified_nb)"
+    "check_increment(by1more(by1more(modified_nb)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This use case is common in the framework. For example, all selectors share methods named `.select` and `.select_population`. It would be good to be able to change the behaviour of an instance of a selector without modifying or extending its class."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from evokit.core import Selector, Population, Individual\n",
-    "\n",
-    "from typing import Callable, TypeVar, Any\n",
-    "\n",
-    "D = TypeVar(\"D\", bound=Individual)\n",
-    "\n",
-    "def Elitist(sel: Selector[D]) -> Selector:\n",
-    "\n",
-    "    def wrap_function(original_select_population:\n",
-    "                      Callable[[Selector[D], Population[D]],\n",
-    "                               Population[D]]) -> Callable:\n",
-    "\n",
-    "        @wraps(original_select_population)\n",
-    "        def wrapper(self: Selector[D],\n",
-    "                    population: Population[D],\n",
-    "                    *args: Any, **kwargs: Any) -> Population[D]:\n",
-    "\n",
-    "            population_best: D = population.best()\n",
-    "            my_best: D\n",
-    "            \n",
-    "            # Monkey-patch an attribute onto the selector. If the \n",
-    "            # Current name is taken from a randomly generated SSH pubkey.\n",
-    "            #   Nobody else will use a name *this* absurd.\n",
-    "            UBER_SECRET_BEST_INDIVIDUAL_NAME = \"___g1AfoA2NMh8ZZCmRJbwFcne4jS1f3Y2TRPIvBmVXQP\"\n",
-    "            if not hasattr(self, UBER_SECRET_BEST_INDIVIDUAL_NAME):\n",
-    "                setattr(self, UBER_SECRET_BEST_INDIVIDUAL_NAME, population_best.copy())\n",
-    "\n",
-    "            hof_individual: D\n",
-    "            my_best = getattr(self, UBER_SECRET_BEST_INDIVIDUAL_NAME)\n",
-    "\n",
-    "            if my_best.fitness > population_best.fitness:\n",
-    "                hof_individual = my_best\n",
-    "                #print(\"use my best\", end=\"\")\n",
-    "            else:\n",
-    "                hof_individual = population_best\n",
-    "                setattr(self, UBER_SECRET_BEST_INDIVIDUAL_NAME, population_best.copy())\n",
-    "                #print(\"use population best\", end=\"\")\n",
-    "            #print(f\", {str(hof_individual)}score is m{my_best.fitness} > p{population_best.fitness}\")\n",
-    "\n",
-    "            # Acquire results of the original selector\n",
-    "            results: tuple[D, ...] = \\\n",
-    "                original_select_population(self, population, *args, **kwargs)\n",
-    "\n",
-    "            # Append the best individual to results\n",
-    "            return Population(*results, hof_individual.copy())\n",
-    "        return wrapper\n",
-    "\n",
-    "    setattr(sel, 'select_population',\n",
-    "            MethodType(\n",
-    "                wrap_function(sel.select_population.__func__),  # type:ignore\n",
-    "                sel))\n",
-    "    return sel"
+    "Note that by1more modifies its argument in-place."
    ]
   }
  ],
@@ -332,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
