--- a/docs/source/guides/examples/onemax.ipynb
+++ b/docs/source/guides/examples/onemax.ipynb
@@ -220,11 +220,11 @@
     "\n",
     "Each step of the algorithm includes the following operations:\n",
     "\n",
-    "1. `evaluate` :attr:`population`\n",
-    "2. `select` from :attr:`population`\n",
-    "    * then, `update` :attr:`population` with result\n",
-    "3. `vary` :attr:`population`\n",
-    "    * then, `update` :attr:`population` with result\n"
+    "1. `evaluate` the `population`\n",
+    "2. `select` from `population`\n",
+    "    * then, `update` `population` with the result\n",
+    "3. `vary` `population`\n",
+    "    * then, `update` the `population` with the result\n"
    ]
   },
   {
