doc(guides-interceptor): Remove ReST syntax in Markdown cell (what)

--- a/docs/source/guides/examples/onemax.ipynb
+++ b/docs/source/guides/examples/onemax.ipynb
@@ -353,7 +353,9 @@
    "metadata": {},
    "source": [
     "Plot the training curve, note that the increase in\n",
-    "fitness slows down near convergence. For EvoKit's specialised\n",
+    "fitness slows down near convergence.\n",
+    "\n",
+    "For EvoKit's specialised\n",
     "data collection and reporting module, see the\n",
     "[Accountant Tutorial](./accountant.ipynb)."
    ]
