struct(accountant!): Rename `Accountant` to `Watcher`

--- a/docs/source/guides/examples/accountant.ipynb
+++ b/docs/source/guides/examples/accountant.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Collect Runtime Statistics with `Accountant`"
+    "# Collect Runtime Statistics with `Watcher`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Accountant` module can collect runtime statistics. It uses\n",
-    "the observer pattern: once an `Accountant` is registered to an\n",
+    "The `Watcher` module can collect runtime statistics. It uses\n",
+    "the observer pattern: once an `Watcher` is registered to an\n",
     "`Algorithm`, events reported by the `Algorithm` may handlers \n",
     "\n",
     "This module is useful when the algorithm has a complicated `.step(..)`.\n",
@@ -146,14 +146,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Automating with Accountant\n",
+    "## Automating with Watcher\n",
     "\n",
-    "In `accounting`, the `.Accountant` module automates statistics collection.\n",
-    "`accounting.accountants` provides several simple accountants for reference.\n",
+    "In `accounting`, the `.Watcher` module automates statistics collection.\n",
+    "`accounting.watchers` provides several simple watchers for reference.\n",
     "In addition, `accounting.visualisers` offers a suite of utilities\n",
     "to plot collected data.\n",
     "\n",
-    "Instead of using a stock accountant, let's build our own!"
+    "Instead of using a stock watcher, let's build our own!"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "source": [
     "### Inspecting Available Events\n",
     "\n",
-    "To create an accountant for an algorithm, it's best to check what\n",
+    "To create an watcher for an algorithm, it's best to check what\n",
     "event the algorithm could report. An algorithm declares its standard\n",
     "events in `.events`.\n",
     "Furthermore, the base class `Algorithm` fires two events automatically:\n",
@@ -194,24 +194,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Crafting an Accountant\n",
-    "An accountant must be created with `accounting.Accountant`.\n",
+    "### Crafting an Watcher\n",
+    "An watcher must be created with `accounting.Watcher`.\n",
     "The constructor takes three parameters: (a) a list of `events`\n",
     "that can trigger collection, (b) a callable `handler` that collects\n",
     "data from the associated algorithm, and (c) an optional parameter\n",
-    "that controls if the accountant should also `watch_automatic_events`.\n",
+    "that controls if the watcher should also `watch_automatic_events`.\n",
     "\n",
-    "For simplicity, declare an `Accountant` that collects the best fitness\n",
+    "For simplicity, declare an `Watcher` that collects the best fitness\n",
     "from a population only on automatic events. Observe the signature:\n",
-    "the accountant collects...\n",
+    "the watcher collects...\n",
     "\n",
     "* ... from a `HomogeneousAlgorithm` (`Algorithm` with one `.population`)\n",
     "of `BinaryString`s,\n",
     "* a `tuple` of one `float` that contains a fitness value.\n",
     "\n",
-    "An algorithm can register several accountants, which are\n",
-    "updated in order or registration. To check if the accountant\n",
-    "is registered, check if it is in `Algorithm.accountants`."
+    "An algorithm can register several watchers, which are\n",
+    "updated in order or registration. To check if the watcher\n",
+    "is registered, check if it is in `Algorithm.watchers`."
    ]
   },
   {
@@ -220,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evokit.accounting import Accountant\n",
+    "from evokit.accounting import Watcher\n",
     "from evokit.evolvables.algorithms import HomogeneousAlgorithm"
    ]
   },
@@ -230,13 +230,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_acc = Accountant[HomogeneousAlgorithm[BinaryString], tuple[float, ...]](\n",
+    "fit_acc = Watcher[HomogeneousAlgorithm[BinaryString], tuple[float, ...]](\n",
     "    events=[],\n",
     "    handler=lambda algo: algo.population.best().fitness,\n",
     "    watch_automatic_events=True)\n",
     "\n",
     "algo_2.register(fit_acc)\n",
-    "assert(fit_acc in algo_2.accountants)"
+    "assert(fit_acc in algo_2.watchers)"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "metadata": {},
    "source": [
     "To see how things work under the hood, fire an\n",
-    "event in the algorithm, then check what the accountant\n",
+    "event in the algorithm, then check what the watcher\n",
     "has collected.\n",
     "\n",
     "Each record contains four values: (a) the event that triggered\n",
@@ -266,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[AccountantRecord(event='STEP_BEGIN', generation=0, value=(nan,), time=443313.1574931)]\n"
+      "[WatcherRecord(event='STEP_BEGIN', generation=0, value=(nan,), time=443313.1574931)]\n"
      ]
     }
    ],
