--- a/docs/source/guides/examples/algorithm.ipynb
+++ b/docs/source/guides/examples/algorithm.ipynb
@@ -444,7 +444,7 @@
     "        self.evaluator = evaluator\n",
     "        self.selector = selector\n",
     "        self.variator = variator\n",
-    "        self.accountants: list[Accountant[SimpleLinearAlgorithm[T], Any]] = []\n",
+    "        self.watchers: list[Watcher[SimpleLinearAlgorithm[T], Any]] = []\n",
     "\n",
     "    @override\n",
     "    def step(self) -> None:\n",
