--- a/docs/source/guides/examples/onemax.ipynb
+++ b/docs/source/guides/examples/onemax.ipynb
@@ -357,7 +357,7 @@
     "\n",
     "For EvoKit's specialised\n",
     "data collection and reporting module, see the\n",
-    "[Accountant Tutorial](./accountant.ipynb)."
+    "[Watcher Tutorial](./watcher.ipynb)."
    ]
   },
   {
