fix(watching): Amend 617e658

--- a/docs/source/guides/examples/watcher.ipynb
+++ b/docs/source/guides/examples/watcher.ipynb
@@ -46,7 +46,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'evokit.accounting.watcher'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01mevokit\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Population\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01mevokit\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mevolvables\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01malgorithms\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SimpleLinearAlgorithm\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01mevokit\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mevolvables\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mselectors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TruncationSelector, Elitist\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Assets\\Workspace\\git\\evokit\\build\\__editable__.evokit-0.3.1-py3-none-any\\evokit\\core\\__init__.py:10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01m.\u001b[39;00m\u001b[34;01mselector\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Selector \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01m.\u001b[39;00m\u001b[34;01mvariator\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Variator, NullVariator \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01m.\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01maccounting\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mwatcher\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Watcher, WatcherRecord \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Assets\\Workspace\\git\\evokit\\build\\__editable__.evokit-0.3.1-py3-none-any\\evokit\\accounting\\__init__.py:1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01m.\u001b[39;00m\u001b[34;01mwatcher\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Watcher  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01m.\u001b[39;00m\u001b[34;01mwatcher\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m WatcherRecord  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[32m      4\u001b[39m __all__ = [\u001b[33m\"\u001b[39m\u001b[33mWatcher\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mWatcherRecord\u001b[39m\u001b[33m\"\u001b[39m]\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'evokit.accounting.watcher'"
+     ]
+    }
+   ],
    "source": [
     "from evokit.core import Population\n",
     "from evokit.evolvables.algorithms import SimpleLinearAlgorithm\n",
@@ -78,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -148,9 +162,9 @@
    "source": [
     "## Automating with Watcher\n",
     "\n",
-    "In `accounting`, the `.Watcher` module automates statistics collection.\n",
-    "`accounting.watchers` provides several simple watchers for reference.\n",
-    "In addition, `accounting.visualisers` offers a suite of utilities\n",
+    "In `watching`, the `.Watcher` module automates statistics collection.\n",
+    "`watching.watchers` provides several simple watchers for reference.\n",
+    "In addition, `watching.visualisers` offers a suite of utilities\n",
     "to plot collected data.\n",
     "\n",
     "Instead of using a stock watcher, let's build our own!"
@@ -174,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,13 +234,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evokit.accounting import Watcher\n",
+    "from evokit.watching import Watcher\n",
     "from evokit.evolvables.algorithms import HomogeneousAlgorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +327,7 @@
     }
    ],
    "source": [
-    "from evokit.accounting.visualisers import plot\n",
+    "from evokit.watching.visualisers import plot\n",
     "\n",
     "plot(fit_acc.report(),\n",
     "     track_generation=True,\n",
@@ -346,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
