doc(guides): Un-monospace component names

--- a/docs/source/guides/examples/algorithm.ipynb
+++ b/docs/source/guides/examples/algorithm.ipynb
@@ -27,10 +27,10 @@
     "\n",
     "| Component  | Guide                                          |\n",
     "| ---------- | ---------------------------------------------- |\n",
-    "|`Individual`|[OneMax tutorial](./onemax.ipynb#Individual)|\n",
-    "|`Evaluator`|[Selector tutorial](./onemax.ipynb#Evaluator)|\n",
-    "|`Selector`|[OneMax tutorial](./selector.ipynb)|\n",
-    "|`Variator`|[OneMax tutorial](./onemax.ipynb#Variator)|"
+    "|Individual|[OneMax tutorial](./onemax.ipynb#Individual)|\n",
+    "|Evaluator|[Selector tutorial](./onemax.ipynb#Evaluator)|\n",
+    "|Selector|[OneMax tutorial](./selector.ipynb)|\n",
+    "|Variator|[OneMax tutorial](./onemax.ipynb#Variator)|"
    ]
   },
   {
