--- a/docs/source/guides/examples/watch.ipynb
+++ b/docs/source/guides/examples/watch.ipynb
@@ -30,12 +30,12 @@
     "\n",
     "To begin, consider a simple GA with the following configuration:\n",
     "\n",
-    "| Component  | Guide                                          |\n",
+    "| Component  | Choice                                          |\n",
     "| ----------- | ---------------------------------------------- |\n",
-    "|`Individual`|Binary string|\n",
-    "|`Evaluator`|OneMax|\n",
-    "|`Selector`|Elitist truncation|\n",
-    "|`Variator`|Mutation|\n",
+    "|Individual|Binary string|\n",
+    "|Evaluator|OneMax|\n",
+    "|Selector|Elitist truncation|\n",
+    "|Variator|Mutation|\n",
     "\n",
     "Use a population of 5000 individuals, each a 5000-bits long binary string.\n",
     "EvoKit has all building blocks for this algorithm; for convenience,\n",
