struct(binstring!): Rename `binstring` to `bitstring`

--- a/docs/source/guides/examples/algorithm.ipynb
+++ b/docs/source/guides/examples/algorithm.ipynb
@@ -83,17 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from evokit.core import Population\n",
-    "from evokit.evolvables.binstring import BinaryString"
+    "from evokit.evolvables.bitstring import BitString"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -105,11 +105,11 @@
     }
    ],
    "source": [
-    "pop : Population[BinaryString] = Population[BinaryString]()\n",
+    "pop : Population[BitString] = Population[BitString]()\n",
     "\n",
-    "pop.append(BinaryString(int('11111', 2), 5))\n",
-    "pop.append(BinaryString(int('11110', 2), 5))\n",
-    "pop.append(BinaryString(int('11100', 2), 5))\n",
+    "pop.append(BitString(int('11111', 2), 5))\n",
+    "pop.append(BitString(int('11110', 2), 5))\n",
+    "pop.append(BitString(int('11100', 2), 5))\n",
     "\n",
     "print(pop)"
    ]
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
     }
    ],
    "source": [
-    "from evokit.evolvables.binstring import MutateBits\n",
+    "from evokit.evolvables.bitstring import MutateBits\n",
     "variator = MutateBits(mutation_rate=0.1)\n",
     "\n",
     "offspring = variator.vary_population(pop)\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
     }
    ],
    "source": [
-    "from evokit.evolvables.binstring import CountBits\n",
+    "from evokit.evolvables.bitstring import CountBits\n",
     "\n",
     "CountBits().evaluate_population(joined_pool)\n",
     "\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
    "source": [
     "from evokit.evolvables.selectors import TruncationSelector\n",
     "\n",
-    "new_pop = TruncationSelector[BinaryString](budget=3)\\\n",
+    "new_pop = TruncationSelector[BitString](budget=3)\\\n",
     "      .select_population(joined_pool)  # type: ignore\n",
     "print(f\"The truncation selector selects {new_pop}.\")"
    ]
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,10 +308,10 @@
     "\n",
     "    @override\n",
     "    def __init__(self,\n",
-    "                 population: Population[BinaryString],\n",
-    "                 evaluator: Evaluator[BinaryString],\n",
-    "                 selector: Selector[BinaryString],\n",
-    "                 variator: Variator[BinaryString]) -> None:\n",
+    "                 population: Population[BitString],\n",
+    "                 evaluator: Evaluator[BitString],\n",
+    "                 selector: Selector[BitString],\n",
+    "                 variator: Variator[BitString]) -> None:\n",
     "        self.population = population\n",
     "        self.evaluator = evaluator\n",
     "        self.selector = selector\n",
@@ -331,12 +331,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The creation of individuals can also be automated. For example, `BinaryString.random` creates random binary strings of a given length. Take advantage of this to create a initial population."
+    "The creation of individuals can also be automated. For example, `BitString.random` creates random binary strings of a given length. Take advantage of this to create a initial population."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -348,8 +348,8 @@
     }
    ],
    "source": [
-    "another_pop = Population((BinaryString.random(size=5)\n",
-    "                                      for _ in range(3)))\n",
+    "another_pop = Population((BitString.random(size=5)\n",
+    "                          for _ in range(3)))\n",
     "\n",
     "print(f\"Initial population: {another_pop}\")"
    ]
