--- a/docs/source/guides/examples/lineage.ipynb
+++ b/docs/source/guides/examples/lineage.ipynb
@@ -19,8 +19,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parents are (<evokit.evolvables.binstring.BinaryString object at 0x0000021A6088D6D0>, <evokit.evolvables.binstring.BinaryString object at 0x0000021A6048C230>)\n",
-      "Parents are (<evokit.evolvables.binstring.BinaryString object at 0x0000021A6088D6D0>, <evokit.evolvables.binstring.BinaryString object at 0x0000021A6048C230>)\n"
+      "Parents are (<evokit.evolvables.bitstring.BitString object at 0x0000021A6088D6D0>, <evokit.evolvables.bitstring.BitString object at 0x0000021A6048C230>)\n",
+      "Parents are (<evokit.evolvables.bitstring.BitString object at 0x0000021A6088D6D0>, <evokit.evolvables.bitstring.BitString object at 0x0000021A6048C230>)\n"
      ]
     }
    ],
@@ -37,8 +37,8 @@
     {
      "data": {
       "text/plain": [
-       "(<evokit.evolvables.binstring.BinaryString at 0x21a6088d6d0>,\n",
-       " <evokit.evolvables.binstring.BinaryString at 0x21a6048c230>)"
+       "(<evokit.evolvables.bitstring.BitString at 0x21a6088d6d0>,\n",
+       " <evokit.evolvables.bitstring.BitString at 0x21a6048c230>)"
       ]
      },
      "execution_count": 9,
