--- a/docs/source/guides/examples/onemax.ipynb
+++ b/docs/source/guides/examples/onemax.ipynb
@@ -45,8 +45,8 @@
     "3. Override `.copy(..)` to return an independent copy.\n",
     "\n",
     "The implementation must decide how to initialise new individuals.\n",
-    "In this example, the class `BinaryString` implements a factory\n",
-    "method `BinaryString.random(..)`, which creates a uniformly\n",
+    "In this example, the class `BitString` implements a factory\n",
+    "method `BitString.random(..)`, which creates a uniformly\n",
     "random bit string of the given length."
    ]
   },
@@ -70,7 +70,7 @@
     "from random import getrandbits\n",
     "from evokit.core import Individual\n",
     "\n",
-    "class BinaryString(Individual[list[int]]):\n",
+    "class BitString(Individual[list[int]]):\n",
     "    @override\n",
     "    def __init__(self, value: list[int]) -> None:\n",
     "        \"\"\"Required.\n",
@@ -89,12 +89,12 @@
     "        return type(self)(self.genome.copy())\n",
     "\n",
     "    @staticmethod\n",
-    "    def random(len: int) -> BinaryString:\n",
+    "    def random(len: int) -> BitString:\n",
     "        \"\"\"Not required.\n",
     "        \n",
     "        Initialise a random individual.\n",
     "        \"\"\"\n",
-    "        return BinaryString(\n",
+    "        return BitString(\n",
     "            (len * [0] +\n",
     "                [int(digit)\n",
     "                 for digit in bin(getrandbits(len))[2:]])[-len:]\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
     "\n",
     "from evokit.core import Variator\n",
     "\n",
-    "class RandomBitMutator(Variator[BinaryString]):\n",
+    "class RandomBitMutator(Variator[BitString]):\n",
     "    @override\n",
     "    def __init__(self, mutation_rate: float):\n",
     "        self.arity = 1\n",
@@ -152,8 +152,8 @@
     "        self.mutation_rate = mutation_rate\n",
     "    \n",
     "    @override\n",
-    "    def vary(self, parents: Sequence[BinaryString]) -> tuple[BinaryString,\n",
-    "                                                             BinaryString]:\n",
+    "    def vary(self, parents: Sequence[BitString]) -> tuple[BitString,\n",
+    "                                                          BitString]:\n",
     "        \"\"\"Required.\n",
     "\n",
     "        Produce new individuals from existing ones.\n",
@@ -181,7 +181,7 @@
     "\n",
     "The `.evaluate_population(..)` method, which is not covered here, applies `.evaluate(..)` to each \n",
     "\n",
-    "In this example, `.evaluate(..)` returns a 1-tuple because it uses only one measure of fitness. The method sums all bits in the `.genome` of a `BinaryString`."
+    "In this example, `.evaluate(..)` returns a 1-tuple because it uses only one measure of fitness. The method sums all bits in the `.genome` of a `BitString`."
    ]
   },
   {
@@ -193,9 +193,9 @@
     "from evokit.core import Evaluator\n",
     "from typing import override\n",
     "\n",
-    "class BitDistanceEvaluator(Evaluator[BinaryString]):\n",
+    "class BitDistanceEvaluator(Evaluator[BitString]):\n",
     "    @override\n",
-    "    def evaluate(self, individual: BinaryString) -> tuple[float]:\n",
+    "    def evaluate(self, individual: BitString) -> tuple[float]:\n",
     "        return (sum(individual.genome),)"
    ]
   },
@@ -244,7 +244,7 @@
     "### Initialise Population\n",
     "\n",
     "The algorithm should begin with a pool of candidate solutions.\n",
-    "Create a number of `BinaryString` instances, then store them in\n",
+    "Create a number of `BitString` instances, then store them in\n",
     "a `Population`. This is the initial population."
    ]
   },
@@ -259,10 +259,10 @@
     "BINSTRING_LENGTH: int = 1000\n",
     "POPULATION_SIZE: int = 20\n",
     "GENERATION_COUNT: int = 100\n",
-    "init_pop = Population[BinaryString]()\n",
+    "init_pop = Population[BitString]()\n",
     "\n",
     "for i in range(0, POPULATION_SIZE):\n",
-    "    init_pop.append(BinaryString.random(BINSTRING_LENGTH))"
+    "    init_pop.append(BitString.random(BINSTRING_LENGTH))"
    ]
   },
   {
@@ -281,11 +281,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ctrl: SimpleLinearAlgorithm[BinaryString] =\\\n",
-    "        SimpleLinearAlgorithm[BinaryString](\n",
+    "ctrl: SimpleLinearAlgorithm[BitString] =\\\n",
+    "        SimpleLinearAlgorithm[BitString](\n",
     "    population=init_pop,\n",
     "    variator=RandomBitMutator(0.1),\n",
-    "    selector=Elitist(TruncationSelector[BinaryString](POPULATION_SIZE)),\n",
+    "    selector=Elitist(TruncationSelector[BitString](POPULATION_SIZE)),\n",
     "    evaluator = BitDistanceEvaluator()\n",
     ")"
    ]
@@ -307,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bests: list[BinaryString] = []\n",
+    "bests: list[BitString] = []\n",
     "\n",
     "for _ in range(GENERATION_COUNT):\n",
     "    ctrl.step()\n",
