--- a/docs/source/guides/examples/watch.ipynb
+++ b/docs/source/guides/examples/watch.ipynb
@@ -181,7 +181,7 @@
     "the watcher collects...\n",
     "\n",
     "* ... from a `HomogeneousAlgorithm` (`Algorithm` with one `.population`)\n",
-    "of `BinaryString`s,\n",
+    "of `BitString`s,\n",
     "* a `tuple` of one `float` that contains a fitness value.\n",
     "\n",
     "An algorithm can register several watchers, which are\n",
@@ -197,7 +197,7 @@
    "source": [
     "from evokit.watch import Watcher\n",
     "from evokit.evolvables.algorithms import HomogeneousAlgorithm\n",
-    "from evokit.evolvables.binstring import BinaryString"
+    "from evokit.evolvables.binstring import BitString"
    ]
   },
   {
@@ -206,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_acc = Watcher[HomogeneousAlgorithm[BinaryString], tuple[float, ...]](\n",
+    "fit_acc = Watcher[HomogeneousAlgorithm[BitString], tuple[float, ...]](\n",
     "    events=[],\n",
     "    handler=lambda algo: algo.population.best().fitness,\n",
     "    watch_post_step=True)\n",
