--- a/docs/source/guides/examples/selector.ipynb
+++ b/docs/source/guides/examples/selector.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "from evokit.core import Population\n",
-    "from evokit.evolvables.binstring import BinaryString"
+    "from evokit.evolvables.bitstring import BitString"
    ]
   },
   {
@@ -52,14 +52,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop : Population[BinaryString] = Population[BinaryString]()\n",
+    "pop : Population[BitString] = Population[BitString]()\n",
     "\n",
-    "pop.append(BinaryString(int('11111', 2), 5))\n",
-    "pop.append(BinaryString(int('11110', 2), 5))\n",
-    "pop.append(BinaryString(int('11100', 2), 5))\n",
-    "pop.append(BinaryString(int('11000', 2), 5))\n",
-    "pop.append(BinaryString(int('10000', 2), 5))\n",
-    "pop.append(BinaryString(int('00000', 2), 5))"
+    "pop.append(BitString(int('11111', 2), 5))\n",
+    "pop.append(BitString(int('11110', 2), 5))\n",
+    "pop.append(BitString(int('11100', 2), 5))\n",
+    "pop.append(BitString(int('11000', 2), 5))\n",
+    "pop.append(BitString(int('10000', 2), 5))\n",
+    "pop.append(BitString(int('00000', 2), 5))"
    ]
   },
   {
@@ -157,11 +157,11 @@
     "from evokit.core import Selector\n",
     "from operator import attrgetter\n",
     "\n",
-    "class TruncationSelector(Selector[BinaryString]):\n",
+    "class TruncationSelector(Selector[BitString]):\n",
     "    @override\n",
     "    def select_population(self: Self,\n",
-    "                          from_population: Population[BinaryString])\\\n",
-    "            -> Population[BinaryString]:\n",
+    "                          from_population: Population[BitString])\\\n",
+    "            -> Population[BitString]:\n",
     "        \n",
     "        return Population(sorted(list(from_population), key=attrgetter(\"fitness\"))\n",
     "                          [-self.budget:])"
