code(watch-visual!): Rename `track_generation to `show_generation`

--- a/docs/source/guides/examples/watch.ipynb
+++ b/docs/source/guides/examples/watch.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
     "from evokit.watch.visual import plot\n",
     "\n",
     "plot([x for x in fit_acc.report() if x.event == \"POST_STEP\"],\n",
-    "     track_generation=True,)"
+    "     show_generation=True,)"
    ]
   },
   {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
     "\n",
     "ax3.set_title(\"Plot `Watcher` data with `watch.visualiser.plot`\")\n",
     "plot(fit_acc.report(),\n",
-    "     track_generation=True,\n",
+    "     show_generation=True,\n",
     "     axes=ax3,\n",
     "     use_line=True)\n",
     "ax3.set_ylabel(\"Fitness\")\n",
